--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,18 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.7"
+bevy_egui = "0.14.0"
 futures-util = "0.3.21"
-num_enum = "0.5.7"
 quinn = "0.8.3"
 rcgen = "0.9.2"
 rustls = "0.20.6"
-tokio = "1.19.2"
+serde = "1.0.137"
+serde_yaml = "0.8.24"
+thiserror = "1.0.31"
+tokio = { version = "1.19.2", features = ["sync"] }
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
