--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies.bevy_mod_ouroboros_derive]
+path = "crates/bevy_mod_ouroboros_derive"
+
 [dependencies]
 bevy = "0.7"
 bevy_egui = "0.14.0"
