--- a/crates/bevy_editor_iris_common/Cargo.toml
+++ b/crates/bevy_editor_iris_common/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "bevy_editor_iris_common"
+description = "Common code for the editor and client of bevy_editor_iris"
+license = "MIT OR Apache-2.0"
 version = "0.1.0"
 edition = "2021"
 
