fixed broken rename

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,16 +10,16 @@ edition = "2021"
 version = "0.1.0"
 
 [dependencies.bevy_editor_iris_common]
-# path = "crates/bevy_editor_iris_common"
-version = "0.1.0"
+path = "crates/bevy_editor_iris_common"
+# version = "0.1.0"
 
 [dependencies.bevy_editor_iris_editor]
-# path = "crates/bevy_editor_iris_editor"
-version = "0.1.0"
+path = "crates/bevy_editor_iris_editor"
+# version = "0.1.0"
 
 [dependencies.bevy_editor_iris_plugin]
-# path = "crates/bevy_editor_iris_plugin"
-version = "0.1.0"
+path = "crates/bevy_editor_iris_plugin"
+# version = "0.1.0"
 
 [dependencies]
 bevy = "0.7"
