--- a/crates/bevy_editor_iris_common/Cargo.toml
+++ b/crates/bevy_editor_iris_common/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.bevy_editor_iris_derive]
-# path = "../bevy_editor_iris_derive"
+path = "../bevy_editor_iris_derive"
 version = "0.1"
 
 [dependencies]
@@ -20,4 +20,4 @@ rustls = "0.20.6"
 serde = "1.0.137"
 serde_yaml = "0.8.24"
 thiserror = "1.0.31"
-tokio = "1.19.2"
+tokio = { version = "1.19.2", features = ["sync"] }
