--- a/crates/bevy_editor_iris_plugin/Cargo.toml
+++ b/crates/bevy_editor_iris_plugin/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies.bevy_editor_iris_common]
-# path = "../bevy_editor_iris_common"
+[dependencies.common]
+path = "../bevy_editor_iris_common"
+package = "bevy_editor_iris_common"
 version = "0.1"
 
 [dependencies]
