--- a/crates/bevy_editor_iris_common/Cargo.toml
+++ b/crates/bevy_editor_iris_common/Cargo.toml
@@ -13,11 +13,12 @@ version = "0.1"
 
 [dependencies]
 bevy = "0.7.0"
-futures-util = "0.3.21"
+futures = "0.3.21"
+futures-lite = "1.12.0"
 quinn = "0.8.3"
 rcgen = "0.9.2"
 rustls = "0.20.6"
 serde = "1.0.137"
 serde_yaml = "0.8.24"
 thiserror = "1.0.31"
-tokio = { version = "1.19.2", features = ["sync"] }
+tokio = { version = "1.19.2", features = ["sync", "macros"] }
